--- a/README
+++ b/README
@@ -1,3 +1,10 @@
+# Newebe CLI
+
+Small client to use the distributed social network Newebe from the command
+line. It's usefule if you're too lazy to open a web browser.
+
+# Usage
+
     Usage:
       newebe_cli.py get lastmessages [--config=config_file]
       newebe_cli.py post <message> [--tag=<tag>] [--config=config_file]
@@ -10,3 +17,11 @@
       --config=<config_file>   Change config file location
                                (default: ~/.newebe-config).
 
+
+      newebe_cli.py get lastmessages
+
+It displays the last 10 messages you received.
+
+      newebe_cli.py post <message>
+
+It posts a new message to your contacts.
